Updated DTO classes